[package]
name = "gameengine-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
pollster = "0.2"
gltf = "1.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
image = "0.24"
anyhow = "1.0"
cgmath = {git = "https://github.com/perry-blueberry/cgmath.git", branch = "master"}
tobj = {version = "3.2.1", features=["async"]}
percent-encoding = "2.2"
base64 = "0.21"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"