[package]
name = "gameengine-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "rendering",
    "collisions",
    "math",
    "animation"
]

[workspace.dependencies]
winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
pollster = "0.2"
gltf = "1.0"
bytemuck = { version = "1.12", features = ["derive"] }
image = "0.24"
anyhow = "1.0"
tobj = { version = "3.2.1", features = ["async"] }
percent-encoding = "2.2"
base64 = "0.21"
num-traits = "0.2"
glam = {version = "0.24", features = ["bytemuck"] }
gilrs = "0.8"
either = "1.8"

[dependencies]
winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
pollster = "0.2"
gltf = "1.0"
bytemuck = { version = "1.12", features = ["derive"] }
anyhow = "1.0"
tobj = { version = "3.2.1", features = ["async"] }
num-traits = "0.2"
glam = {version = "0.24", features = ["bytemuck"] }
gilrs = "0.8"
either = "1.8"
rendering = {path = "rendering"}
math = { path = "math" }
animation = { path = "animation" }
collisions = { path = "collisions" }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

# [[example]]
# name = "animation_blending"
# path = "examples/animation_blending.rs"