[package]
name = "rendering"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["dylib"]

[dependencies]
winit = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
either = { workspace = true }
gltf = { workspace = true }
glam = { workspace = true }
num-traits = { workspace = true }
image = { workspace = true }
collisions = { path = "../collisions" }
math = { path = "../math" }
animation = { path = "../animation" }